# code-chatter

./: .dockerignore  .env.example  .gitignore  Assignment.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_FIX.md  Dockerfile.code_analyst  Dockerfile.gateway  Dockerfile.graph_query  Dockerfile.indexer  Dockerfile.orchestrator  README.md  SSE_MIGRATION_NOTES.md  VERIFICATION_COMPLETE.txt  answers.md  bash.exe.stackdump  docker-compose.cloud.yml  docker-compose.yml  info.md  main.py  pyproject.toml  remove_cache.py  start.bat  start.sh  test.py  test_system.py  verify_endpoints.py
.claude/: settings.local.json
src/LLMS/: __init__.py  models.py
src/agents/: __init__.py
src/agents/code_analyst/: __init__.py  agent.py  code_explainer.py  config.py  function_analyzer.py  graph_context.py  pattern_detector.py  server.py
src/agents/graph_query/: __init__.py  agent.py  config.py  dependency_tracer.py  entity_finder.py  graph_store.py  query_executor.py  server.py  subgraph_slicer.py
src/agents/indexer/: __init__.py  agent.py  (+15 more)
src/database/: neo4j_handler.py
src/gateway/: __init__.py  app.py  config.py
src/graph_making/: LLM_enricher.py  ast_parser.py  graph_manager.py
src/models/: __init__.py  enrichmentLLM.py
src/shared/: __init__.py  config.py  exceptions.py  logging.py  observability.py
tests/: graph_making_test.py
tests/integration/: README.md  __init__.py  test_docker_compose_chat.py  test_simple_chat.py
tests/test_graph_query/: test.py
tests/test_indexer/: test.py  test_server_tools.py
tests/test_orchestrator/: test.py  test_unit.py
(+20 files in other folders)
